--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,15 @@ code {
   justify-content: center;
   width: 50%;
   margin: auto;
+  padding: 5px;
+  background-color: #f3f3f3;
+}
+
+.nav-bar .profile {
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 ul {
@@ -29,7 +38,16 @@ ul {
   padding: 0;
 }
 
+.text-link {
+  text-decoration: none;
+  color: #000;
+}
+
 img {
   border-radius: 50%;
-  width: 20%;
+  width: 15%;
+}
+
+.question {
+  border: 1px solid #000;
 }
